--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     Static<span class="accent">Link</span>
   </h1>
   <p class="mt-6 max-w-xl text-lg md:text-xl text-gray-600" data-aos="fade-up" data-aos-delay="150">
-    Throw links, notes, pics — anything — into a bundle.  
-    Share it instantly with a QR code.  
+    Throw links, notes, pics — anything — into a bundle.<br/>
+    Share it instantly with a QR code.<br/>
     Offline. No logins. No ads.
   </p>
   <div class="mt-8 flex gap-4" data-aos="fade-up" data-aos-delay="300">
     <a href="#download" class="px-6 py-3 rounded-full font-semibold text-white bg-[#3A86FF] shadow-lg hover:scale-105 transition">
-      Download
+      Download Soon
     </a>
     <a href="#features" class="px-6 py-3 rounded-full font-semibold border border-gray-300 hover:bg-gray-100 transition">
       Learn More
@@ -74,6 +74,31 @@
       <div class="text-4xl mb-4">⚡</div>
       <h3 class="text-xl font-semibold mb-2">Instant QR</h3>
       <p class="text-gray-600">Share a QR or file. Done in seconds.</p>
+    </div>
+  </div>
+</section>
+
+<!-- New Section: Use Cases -->
+<section class="max-w-5xl mx-auto px-6 mb-24">
+  <h2 class="text-3xl font-bold text-center mb-12" data-aos="fade-up">
+    Where Static<span class="accent">Link</span> Shines
+  </h2>
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-left text-gray-600" data-aos="fade-up" data-aos-delay="150">
+    <div class="bg-white rounded-2xl shadow p-6">
+      <h3 class="font-semibold text-xl mb-2">Trips & Festivals</h3>
+      <p>Share your itinerary, maps, and playlists with friends without needing a group chat or an app login.</p>
+    </div>
+    <div class="bg-white rounded-2xl shadow p-6">
+      <h3 class="font-semibold text-xl mb-2">Quick Work Handoffs</h3>
+      <p>Pass links and files instantly at the office or in class — no cables, no setup, no accounts.</p>
+    </div>
+    <div class="bg-white rounded-2xl shadow p-6">
+      <h3 class="font-semibold text-xl mb-2">Teaching & Events</h3>
+      <p>Teachers, event hosts, or speakers can just throw everything into a QR — everyone gets it fast.</p>
+    </div>
+    <div class="bg-white rounded-2xl shadow p-6">
+      <h3 class="font-semibold text-xl mb-2">For Yourself</h3>
+      <p>Bundle links and notes as an offline pack you can open later without data or accounts.</p>
     </div>
   </div>
 </section>
