--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
   <h1 class="text-5xl md:text-7xl font-extrabold" data-aos="fade-up">
     Static<span class="accent">Link</span>
   </h1>
+  <p class="mt-4 text-gray-500 font-medium" data-aos="fade-up" data-aos-delay="75">
+    Offline Sharing • Private • Effortless
+  </p>
   <p class="mt-6 max-w-xl text-lg md:text-xl text-gray-600" data-aos="fade-up" data-aos-delay="150">
     Throw links, notes, pics — anything — into a bundle.<br/>
     Share it instantly with a QR code.<br/>
@@ -78,7 +81,32 @@
   </div>
 </section>
 
-<!-- New Section: Use Cases -->
+<!-- New Section: Differentiator -->
+<section class="max-w-5xl mx-auto px-6 mb-24">
+  <h2 class="text-3xl font-bold text-center mb-12" data-aos="fade-up">
+    Not Just Another Notes App
+  </h2>
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-gray-600" data-aos="fade-up" data-aos-delay="150">
+    <div class="bg-white rounded-2xl shadow p-6">
+      <h3 class="font-semibold text-xl mb-2">Why not just Keep/Docs?</h3>
+      <p>
+        Google Keep and Docs are cloud-first and require logins. 
+        StaticLink is designed for instant offline sharing: no account, no internet, and no sync delay.
+      </p>
+    </div>
+    <div class="bg-white rounded-2xl shadow p-6">
+      <h3 class="font-semibold text-xl mb-2">How we’re different</h3>
+      <ul class="list-disc pl-5 space-y-2">
+        <li>Completely offline — works anywhere</li>
+        <li>Private — nothing leaves your device</li>
+        <li>Faster — QR or file hand-off in seconds</li>
+        <li>No bloat — just one purpose, done well</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<!-- Use Cases -->
 <section class="max-w-5xl mx-auto px-6 mb-24">
   <h2 class="text-3xl font-bold text-center mb-12" data-aos="fade-up">
     Where Static<span class="accent">Link</span> Shines
