--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
   <p class="mt-6 max-w-xl text-lg md:text-xl text-gray-600" data-aos="fade-up" data-aos-delay="150">
     Throw links, notes, pics — anything — into a bundle.<br/>
     Share it instantly with a QR code.<br/>
-    Offline. No logins. No ads.
+    Free forever. No logins. No ads.
   </p>
   <div class="mt-8 flex gap-4" data-aos="fade-up" data-aos-delay="300">
     <a href="#download" class="px-6 py-3 rounded-full font-semibold text-white bg-[#3A86FF] shadow-lg hover:scale-105 transition">
       Download Soon
     </a>
-    <a href="#features" class="px-6 py-3 rounded-full font-semibold border border-gray-300 hover:bg-gray-100 transition">
-      Learn More
+    <a href="https://ld-beepbeep.github.io/Static-Link-Web/" class="px-6 py-3 rounded-full font-semibold border border-gray-300 hover:bg-gray-100 transition">
+      Use Already On Web!
     </a>
   </div>
 </section>
@@ -70,8 +70,8 @@
     </div>
     <div class="bg-white rounded-2xl shadow p-6" data-aos="fade-up" data-aos-delay="150">
       <div class="text-4xl mb-4">📶</div>
-      <h3 class="text-xl font-semibold mb-2">Offline First</h3>
-      <p class="text-gray-600">No cloud, no account, no ads. Just local.</p>
+      <h3 class="text-xl font-semibold mb-2">No tracking</h3>
+      <p class="text-gray-600">No cloud, no account, no ads, open-source. Just local.</p>
     </div>
     <div class="bg-white rounded-2xl shadow p-6" data-aos="fade-up" data-aos-delay="300">
       <div class="text-4xl mb-4">⚡</div>
@@ -91,13 +91,13 @@
       <h3 class="font-semibold text-xl mb-2">Why not just Keep/Docs?</h3>
       <p>
         Google Keep and Docs are cloud-first and require logins. 
-        StaticLink is designed for instant offline sharing: no account, no internet, and no sync delay.
+        StaticLink is designed for instant sharing: no account, no tracking, and no sync delay.
       </p>
     </div>
     <div class="bg-white rounded-2xl shadow p-6">
       <h3 class="font-semibold text-xl mb-2">How we’re different</h3>
       <ul class="list-disc pl-5 space-y-2">
-        <li>Completely offline — works anywhere</li>
+        <li>No tracking — all local</li>
         <li>Private — nothing leaves your device</li>
         <li>Faster — QR or file hand-off in seconds</li>
         <li>No bloat — just one purpose, done well</li>
@@ -158,13 +158,13 @@
   <p class="text-gray-600 mb-8" data-aos="fade-up" data-aos-delay="150">
     Coming soon as an open-source APK.
   </p>
-  <a href="#" class="px-8 py-4 rounded-full text-white font-semibold bg-[#3A86FF] shadow-lg hover:scale-105 transition" data-aos="fade-up" data-aos-delay="300">
-    Get Notified
+  <a href="https://github.com/LD-beepbeep/Static-Link-Web" class="px-8 py-4 rounded-full text-white font-semibold bg-[#3A86FF] shadow-lg hover:scale-105 transition" data-aos="fade-up" data-aos-delay="300">
+    Watch On Github
   </a>
 </section>
 
 <footer class="text-center text-gray-400 py-10">
-  © 2025 StaticLink — Open source. Offline forever.
+  © 2025 StaticLink — Open source. Good forever.
 </footer>
 
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
