--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <p class="text-gray-600 mb-8" data-aos="fade-up" data-aos-delay="150">
     Coming soon as an open-source APK.
   </p>
-  <a href="https://github.com/LD-beepbeep/Static-Link-Web" class="px-8 py-4 rounded-full text-white font-semibold bg-[#3A86FF] shadow-lg hover:scale-105 transition" data-aos="fade-up" data-aos-delay="300">
+  <a href="https://ld-beepbeep.github.io/Static-Links/" class="px-8 py-4 rounded-full text-white font-semibold bg-[#3A86FF] shadow-lg hover:scale-105 transition" data-aos="fade-up" data-aos-delay="300">
     Watch On Github
   </a>
 </section>
