--- a/index.html
+++ b/index.html
@@ -191,10 +191,11 @@
   <!-- Promo Card -->
   <div class="bg-white rounded-2xl shadow p-6 flex flex-col" data-aos="fade-up">
     <h3 class="text-xl font-bold mb-2">Windows Program</h3>
-    <p class="flex-grow text-gray-600">The .exe file and the Github Repository for Static Link</p>
+    <p class="flex-grow text-gray-600">The Linux and Windows files for Static Link</p>
     <div class="mt-4 flex gap-2">
-      <a href="https://ld-beepbeep.github.io/static-link/" class="px-4 py-2 rounded-full font-semibold text-white bg-[#3A86FF] shadow hover:scale-105 transition">Download</a>
-      <a href="https://github.com/LD-beepbeep/static-link/tree/main" class="px-4 py-2 rounded-full font-semibold border border-gray-300 hover:bg-gray-100 transition">GitHub</a>
+      <a href="https://github.com/LD-beepbeep/Static-Link-DESKTOP/releases/tag/Windows-Release" class="px-4 py-2 rounded-full font-semibold text-white bg-[#3A86FF] shadow hover:scale-105 transition">Windows</a>
+      <a href="https://github.com/LD-beepbeep/Static-Link-DESKTOP/releases/tag/Linux-Release" class="px-4 py-2 rounded-full font-semibold text-white bg-[#3A86FF] shadow hover:scale-105 transition">Linux</a>
+      <a href="https://github.com/LD-beepbeep/Static-Link-DESKTOP/" class="px-4 py-2 rounded-full font-semibold border border-gray-300 hover:bg-gray-100 transition">GitHub</a>
     </div>
   </div>
   <!-- Web App Card -->
