--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     Ready to Try Static<span class="accent">Link</span>?
   </h2>
   <p class="text-gray-600 mb-8" data-aos="fade-up" data-aos-delay="150">
-    Coming soon as an open-source APK and EXE!
+    Yes, you are!
   </p>
   <a href="https://ld-beepbeep.github.io/Static-Link-Web/" class="px-8 py-4 rounded-full text-white font-semibold bg-[#3A86FF] shadow-lg hover:scale-105 transition" data-aos="fade-up" data-aos-delay="300">
     Try Now!
