--- a/index.html
+++ b/index.html
@@ -179,12 +179,7 @@
   <h2 class="text-4xl font-extrabold mb-6" data-aos="fade-up">
     Ready to Try Static<span class="accent">Link</span>?
   </h2>
-  <p class="text-gray-600 mb-8" data-aos="fade-up" data-aos-delay="150">
-    Yes, you are!
-  </p>
-  <a href="https://ld-beepbeep.github.io/Static-Link-Web/" class="px-8 py-4 rounded-full text-white font-semibold bg-[#3A86FF] shadow-lg hover:scale-105 transition" data-aos="fade-up" data-aos-delay="300">
-    Try Now!
-  </a>
+  
 </section>
 <!-- Cards -->
 <section class="max-w-6xl mx-auto px-6 grid gap-8 md:grid-cols-3 pb-16">
@@ -212,7 +207,7 @@
     <h3 class="text-xl font-bold mb-2">Android APK</h3>
     <p class="flex-grow text-gray-600">Download the open-source Android app!</p>
     <div class="mt-4 flex gap-2">
-      <a href="https://github.com/LD-beepbeep/Static-Link-APK/releases" class="px-4 py-2 rounded-full font-semibold text-white bg-[#3A86FF] shadow hover:scale-105 transition">Download</a>
+      <a href="https://github.com/LD-beepbeep/Static-Link-APK/releases/download/Android-Release/staticlink-release.apk" class="px-4 py-2 rounded-full font-semibold text-white bg-[#3A86FF] shadow hover:scale-105 transition">Download</a>
       <a href="https://github.com/LD-beepbeep/Static-Link-APK" class="px-4 py-2 rounded-full font-semibold border border-gray-300 hover:bg-gray-100 transition">GitHub</a>
     </div>
   </div>
