--- a/index.html
+++ b/index.html
@@ -179,7 +179,6 @@
   <h2 class="text-4xl font-extrabold mb-6" data-aos="fade-up">
     Ready to Try Static<span class="accent">Link</span>?
   </h2>
-  
 </section>
 <!-- Cards -->
 <section class="max-w-6xl mx-auto px-6 grid gap-8 md:grid-cols-3 pb-16">
@@ -214,7 +213,7 @@
 </section>
 
 <footer class="text-center text-gray-400 py-10">
-  © 2025 StaticLink — Open source. Good forever.
+  © 2025 StaticLink — Open source.
 </footer>
 
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
