--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       Download
     </a>
     <a href="https://ld-beepbeep.github.io/Static-Link-Web/" class="px-6 py-3 rounded-full font-semibold border border-gray-300 hover:bg-gray-100 transition">
-      Use On Web!
+      Use In Your Browser!
     </a>
   </div>
 </section>
@@ -203,11 +203,11 @@
   </div>
   <!-- Android APK Card -->
   <div class="bg-white rounded-2xl shadow p-6 flex flex-col" data-aos="fade-up" data-aos-delay="300">
-    <h3 class="text-xl font-bold mb-2">Android APK</h3>
-    <p class="flex-grow text-gray-600">Download the open-source Android app!</p>
+    <h3 class="text-xl font-bold mb-2">PWA (Every Device)</h3>
+    <p class="flex-grow text-gray-600">Download using the download button in the site!</p>
     <div class="mt-4 flex gap-2">
-      <a href="https://github.com/LD-beepbeep/Static-Link-APK/releases/download/Android-Release/staticlink-release.apk" class="px-4 py-2 rounded-full font-semibold text-white bg-[#3A86FF] shadow hover:scale-105 transition">Download</a>
-      <a href="https://github.com/LD-beepbeep/Static-Link-APK" class="px-4 py-2 rounded-full font-semibold border border-gray-300 hover:bg-gray-100 transition">GitHub</a>
+      <a href="https://ld-beepbeep.github.io/Static-Link-Web/" class="px-4 py-2 rounded-full font-semibold text-white bg-[#3A86FF] shadow hover:scale-105 transition">Download</a>
+
     </div>
   </div>
 </section>
