--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     Static<span class="accent">Link</span>
   </h1>
   <p class="mt-4 text-gray-500 font-medium" data-aos="fade-up" data-aos-delay="75">
-    Offline Sharing • Private • Effortless
+    Better Sharing • Private • Effortless
   </p>
   <p class="mt-6 max-w-xl text-lg md:text-xl text-gray-600" data-aos="fade-up" data-aos-delay="150">
     Throw links, notes, pics — anything — into a bundle.<br/>
